# pre-commit-trivy

./: .gitignore  .pre-commit-hooks.yaml  .pylintrc  .trivyignore.example  README.md  pyproject.toml  trivy.yaml.example
.github/workflows/: ci.yml
pre_commit_hooks/: __init__.py  trivy_scan.py
tests/: __init__.py  conftest.py  test_trivy_scan.py
